<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <TableLayout
        android:id="@+id/step_and_length"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
            <TextView android:id="@+id/step_values"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_50"
                android:text="@string/zero" />
            <ImageView
                android:id="@+id/ouc_icon"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ouc_icon"
                android:scaleType="centerInside"
                android:src="@drawable/ouc_icon" />
            
            <TextView android:id="@+id/length_values"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30" 
                android:text="@string/zerodotzero" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
            <TextView android:id="@+id/step_units"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15"
                android:text="@string/step_unit" />
            <ImageView 
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ouc_icon"/>
            <TextView android:id="@+id/length_units"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15"
                android:text="@string/length_unit" />
        </TableRow>
    </TableLayout>
       
    <TableLayout
        android:id="@+id/velocity_and_distance"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">
            <LinearLayout 
                android:id="@+id/velocity"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                    <TextView
                    	android:id="@+id/velocity_values"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="center"
                		android:textColor="@color/white"
                		android:textSize="@dimen/text_size_30" 
                    	android:text="@string/zerodotzero"
                    	android:drawableLeft="@drawable/speed" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/velocity_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/margin"
                            android:text="@string/velocity_text"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_15" />

                        <TextView
                            android:id="@+id/velocity_unit"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingLeft="@dimen/margin"
                            android:text="@string/velocity_unit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_15" />
                    </LinearLayout>

            </LinearLayout>
            <LinearLayout 
                android:id="@+id/distance"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                    <TextView
                    	android:id="@+id/distance_values"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="center"
                		android:textColor="@color/white"
                		android:textSize="@dimen/text_size_30" 
                    	android:text="@string/zerodotzerozero"
                    	android:drawableLeft="@drawable/distance" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TextView 
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="@color/white"
                	android:textSize="@dimen/text_size_15"
                    android:text="@string/distance_text"
                    android:paddingLeft="@dimen/margin"/>

                <TextView
                    android:id="@+id/distance_unit"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:gravity="right"
                    android:paddingLeft="@dimen/margin"
                    android:text="@string/distance_unit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_15" />

                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    
    <TableLayout
        android:id="@+id/calorie_and_frequency"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >
            <LinearLayout 
                android:id="@+id/calorie"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                    <TextView
                    	android:id="@+id/calorie_values"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="center"
                		android:textColor="@color/white"
                		android:textSize="@dimen/text_size_30" 
                    	android:text="@string/zerodotzero"
                    	android:drawableLeft="@drawable/calorie" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/calorie_text"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:paddingLeft="@dimen/margin"
                        android:text="@string/calorie_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_15" />

                    <TextView
                        android:id="@+id/calorie_unit"
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:gravity="right"
                        android:paddingLeft="@dimen/margin"
                        android:text="@string/calorie_unit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_15" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout 
                android:id="@+id/frequency"
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                    <TextView
                    	android:id="@+id/frequency_values"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:gravity="center"
                		android:textColor="@color/white"
                		android:textSize="@dimen/text_size_30" 
                    	android:text="@string/zero"
                    	android:drawableLeft="@drawable/frequency" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/frequency_text"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:paddingLeft="@dimen/margin"
                        android:text="@string/frequency_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_15" />

                    <TextView
                        android:id="@+id/frequency_unit"
                        android:layout_width="100dp"
                        android:layout_height="fill_parent"
                        android:gravity="right"
                        android:paddingLeft="@dimen/margin"
                        android:text="@string/frequency_unit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_15" />
                </LinearLayout>

            </LinearLayout>
        </TableRow>
    </TableLayout>
    
    <LinearLayout
        android:id="@+id/open_map_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/open_map_btn"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enter_map" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/track_controller_container"
        style="@style/TrackControllerContainer" >

        <include layout="@layout/track_controller" />
    </LinearLayout>
</LinearLayout>
